--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">TPIngSoftware</string>
+    <string name="text_input_mandatory">Este campo es obligatorio</string>
+    <string name="text_input_format_email">Por favor, introduzca un email válido</string>
+    <string name="text_repeat_password">Las contraseñas no coinsiden</string>
 </resources>
