--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="text_repeat_password">Las contraseñas no coinsiden</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="text_description_forgot_pass">Por favor, ingresa tu dirección de correo electrónico para que podamos enviarte un enlace de recuperación de contraseña.</string>
 </resources>
